# NativeBrowserControl

./: .gitignore  README.md  approval_system_file_download_procedure.md  browser_mcp_server.py  browser_table_extraction.md  check_checkbox_properties.py  download_attachments.py  download_attachments_v2.py  extract_kesai_page.py  investigate_all_rows.py  investigate_checkboxes.py  investigate_file_extensions.py  investigate_file_rows.py  investigate_surrounding_elements.py  investigate_table_full.py  investigate_table_structure.py  native_browser_control_server.py  native_browser_driver.py  parse_log.py  pyproject.toml  search_keyword.py
commands/: add-to-config.md  back.md  click-element.md  click.md  close-tab.md  connect.md  copy-selected.md  elements-summary.md  filter-elements.md  find-text.md  forward.md  full-screenshot.md  get-browser-summary.md  get-page-source.md  get-page-text.md  get-title.md  get-url.md  list-elements.md  list-windows.md  navigate.md  new-tab.md  paste.md  refresh.md  scan-elements.md  screenshot.md  scroll.md  set-element-text.md  switch-tab.md  type-text.md  wait.md  zoom.md
docs/: DOCUMENTATION.md
native_browser_control/: __init__.py
native_browser_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
native_browser_control/core/: __init__.py  driver.py  server.py
native_browser_control/utils/: __init__.py  output.py
native_browser_control/workflows/: __init__.py
native_browser_control/workflows/analysis/: __init__.py  parse_log.py
skills/native-browser-usage/: SKILL.md
(+15 files in other folders)
