[project]
name = "native-browser-control"
version = "0.1.0"
description = "Native Chrome/Edge automation without Selenium using pywinauto"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mss>=10.1.0",
    "pillow>=12.0.0",
    "pywin32>=311",
    "pywinauto>=0.6.9",
    "mcp>=1.0.0",
]

[tool.setuptools]
py-modules = ["browser_mcp_server", "native_browser_driver"]

[project.scripts]
native-browser-mcp = "browser_mcp_server:main"
native-chrome-mcp = "browser_mcp_server:main"
